--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "authentication-manager-app",
+  "name": "deneme",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -15,9 +15,18 @@
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/forms": "^14.2.0",
+    "@angular/material": "^14.0.0",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@nebular/eva-icons": "^10.0.0",
+    "@nebular/theme": "^10.0.0",
+    "alertify": "^0.3.0",
+    "alertifyjs": "^1.13.1",
+    "bootstrap": "^5.2.3",
+    "eva-icons": "^1.1.3",
+    "jquery": "^3.6.4",
+    "ng-sidebar": "^9.4.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
