--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@auth0/angular-jwt": "^5.1.2",
     "@nebular/eva-icons": "^10.0.0",
     "@nebular/theme": "^10.0.0",
     "alertify": "^0.3.0",
     "alertifyjs": "^1.13.1",
+    "angular-jwt": "github:auth0/angular-jwt",
     "bootstrap": "^5.2.3",
     "eva-icons": "^1.1.3",
     "jquery": "^3.6.4",
+    "jwt-decode": "^3.1.2",
     "ng-sidebar": "^9.4.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
